# Credit-Risk-Modelling

./: 2_EDA.ipynb  3_Model-Selection.ipynb  LogReg-Model.ipynb  PBI.ipynb  main.py  pyproject.toml  requirements.txt
models/: baseline_model.pkl  baseline_params.json  best_params.json
notebooks/: 1_CLEANING.ipynb  LogReg-Model.ipynb
